<resources>
    <string name="app_name">MealShare</string>
    <string name="facebook_app_id">1700542143373822</string>
    <string name="fb_login_protocol_scheme">fb1700542143373822</string>


    <string name="meal">Meal:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="address">Address:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="city">City:</string>
    <string name="amount_of_portions">Portions:</string>
    <string name="price">Price:</string>
    <string name="minute">Minute:</string>
    <string name="hour">Hour:</string>
    <string name="day">Day:</string>Opgaveformulering suppleret med kommentarer og passende skitser
    <string name="month">Month:</string>
    <string name="year">Year:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="portions_left">Portions Left:</string>
    <string name="DKK">DKK</string>
    <string name="new_meal_header">Share Meal</string>
    <string name="user">Cooked by:</string>
    <string name="save">Save</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Reserve</string>
    <string name="back">Back</string>
    <string name="delete">Cancel Meal</string>
    <string name="unsubcribe">Opt Out</string>
    <string name="mymeals">My Meals</string>
    <string name="shared_meals_header">My reserved meals</string>
    <string name="my_meals_header">My meals</string>
    <string name="validate_empty_field">You must fill out this information!</string>
    <string name="validate_too_many_characters">Maximum characters: 30</string>
    <string name="validate_zipcode">Zipcode must be 4 numbers</string>
    <string name="signout">Sign out!</string>
    <string name="main_info">Pick a meal from the list:</string>
    <string name="welcome">Welcome</string>
    <string name="comments">Comments</string>
    <string name="no_portions">No portions left!</string>
    <string name="still_updating_meal">Please wait a moment and try again</string>
    <string name="write_comment">Write a comment:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="reserve">Reserve this meal</string>
    <string name="reserve_question">Are you sure you want to reserve </string>
    <string name="put_comment_error">Failed to add comment</string>
    <string name="put_meal_error">Failed to create meal</string>
    <string name="meal_shared">Your meal has been shared!</string>
    <string name="meal_reserved">Meal reserved!</string>
    <string name="meal_canceled">Meal reservation canceled!</string>
    <string name="meal_deleted">Meal deleted!</string>
    <string name="invalid_share_meal">Invalid input, check errors!</string>
    <string name="mealWasJoined">Someone has joined your meal!</string>
    <string name="mealWasJoined2">Someone has joined </string>
    <string name="mealWasJoined3">. Portions left: </string>
    <string name="mealWasCanceled">Your reservation has been cancelled!</string>
    <string name="mealWasCanceled2">A user cancelled a meal you reserved</string>
    <string name="mealWasCommented">A user commented on a meal!</string>
    <string name="mealWasCommented2">A user commented on the same meal as you</string>
    <string name="myMealWasCommented">A user commented your meal!</string>
    <string name="myMealWasCommented2">A user wrote a comment on your meal: </string>



    <string-array name="day_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>


    <string-array name="month_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year_array">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="hour_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <!-- Constants for all sorts of stuff -->
    <string name="mealCollection">meals</string>
    <string name="commentCollection">comments</string>
    <string name="subscriptionCollection">userSubscriptions</string>
</resources>