<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mealsharedev.mealshare.NewMealActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnSave"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_style"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_style"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSave" />

    <TextView
        android:id="@+id/txtMealNameHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="22dp"
        android:text="@string/meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewMealHeader" />

    <EditText
        android:id="@+id/editMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtMealNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtMealNameHeader" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/editMealName"
        app:layout_constraintTop_toBottomOf="@+id/editMealName" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/txtDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <TextView
        android:id="@+id/txtAmountHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/amount_of_portions"
        app:layout_constraintStart_toStartOf="@+id/editLocation"
        app:layout_constraintTop_toBottomOf="@+id/editLocation" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editPrice"
        app:layout_constraintStart_toStartOf="@+id/txtAmountHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtAmountHeader" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtLocationHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtLocationHeader" />

    <TextView
        android:id="@+id/txtLocationHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <TextView
        android:id="@+id/txtNewMealHeader"
        style="@style/ActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/new_meal_header"
        app:layout_constraintStart_toEndOf="@+id/txtMealNameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editLocation"
        app:layout_constraintStart_toEndOf="@+id/editLocation"
        app:layout_constraintTop_toTopOf="@+id/editAmount" />

    <TextView
        android:id="@+id/txtPriceHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/editPrice"
        app:layout_constraintStart_toStartOf="@+id/editPrice" />

</android.support.constraint.ConstraintLayout>
