<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mealsharedev.mealshare.MealDetailsActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtDescriptionHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="109dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/txtTimeStampHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPortionsLeft"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="135dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="135dp"
        android:text="@string/portions_left"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtLocation" />

    <TextView
        android:id="@+id/txtLocationHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/txtDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <TextView
        android:id="@+id/txtMealDetailHeader"
        style="@style/ActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="Lasagna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPriceHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
        app:layout_constraintStart_toStartOf="@+id/txtPrice" />

    <Button
        android:id="@+id/btnBuy"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_style"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBack"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/button_style"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="World best lasagna. Nothing else to say!"
        app:layout_constraintStart_toStartOf="@+id/txtDescriptionHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionHeader" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Finlandsgade 26, 8200 Aarhus N"
        app:layout_constraintStart_toStartOf="@+id/txtLocationHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtLocationHeader" />

    <TextView
        android:id="@+id/txtPortions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="3"
        app:layout_constraintStart_toStartOf="@+id/txtPortionsLeft"
        app:layout_constraintTop_toBottomOf="@+id/txtPortionsLeft" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="14dp"
        android:text="29 DKK"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="@+id/txtTimeStamp" />

    <TextView
        android:id="@+id/txtUserHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="Anders Lehman"
        app:layout_constraintStart_toStartOf="@+id/txtUserHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtUserHeader" />

    <TextView
        android:id="@+id/txtTimeStampHeader"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/txtTimeStamp"
        app:layout_constraintStart_toStartOf="@+id/txtTimeStamp" />

    <TextView
        android:id="@+id/txtTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="79dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/txtPriceHeader"
        app:layout_constraintStart_toEndOf="@+id/txtUser" />
</android.support.constraint.ConstraintLayout>
