<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mealsharedev.mealshare.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewMeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewMeal"
        style="@style/MyButtons"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:background="@drawable/button_style"
        android:text="@string/new_meal_header"
        app:layout_constraintBottom_toTopOf="@+id/txtInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo" />

    <TextView
        android:id="@+id/txtInfo"
        style="@style/InputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/main_info"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewMeal" />

    <Button
        android:id="@+id/btnMyMeals"
        style="@style/MyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/button_style"
        android:text="@string/mymeals"
        app:layout_constraintStart_toStartOf="@+id/btnNewMeal"
        app:layout_constraintTop_toBottomOf="@+id/btnNewMeal" />

</android.support.constraint.ConstraintLayout>
